@@ -18,7 +18,7 @@ public:
 	sub_damage_display (submarine* s = 0);	// fixme: give sub type... maybe we don't need this
 	virtual ~sub_damage_display ();
 
-	virtual void display_popup (int x, int y, const string& text, bool atbottom) const;
+	virtual void display_popup (int x, int y, const string& text, bool atleft, bool atbottom) const;
 
 	virtual void display ( class system& sys, class game& gm );
 	virtual void check_key ( int keycode, class system& sys, class game& gm );
